2nd version - validation

--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@
     --cont-color: #ffffff;
     --title-color: #947a05;
     --btn-text: #f1db7a;
+    --btn-disabled: #aca3a3;
+    --inp-error: rgb(143, 66, 66);
     --reset-color: #926d07ea;
+    --btn-success: rgb(76, 158, 22);
     --reset-hover: linear-gradient(120deg, #f3efd7, #b1a687);
 
 }
@@ -57,6 +60,10 @@ body {
     outline: none;
 }
 
+.i__login:focus + .s__login::after {
+    width: 100%;
+}
+
 .s__login {
     height: 1px;
     width: 100%;
@@ -75,6 +82,18 @@ body {
     transition: .3s ease-in-out;
 }
 
+.s__login.error {
+    background: var(--inp-error);
+}
+
+s__login.error::after {
+    background: var(--inp-error);
+}
+
+.s__login.success {
+    background: var(--btn-success);
+}
+
 .b__login {
     height: 48px;
     width: 100%;
@@ -91,12 +110,13 @@ body {
     transition: .5s ease-in-out;
 }
 
-.i__login:focus + .s__login::after {
-    width: 100%;
-}
-
 .b__login:hover {
     background-position: right;
+}
+
+.b__login.disabled {
+    background: var(--btn-disabled);
+    cursor: not-allowed;
 }
 
 .a__reset {
